修改了index的内容

--- a/lianxi_01.html
+++ b/lianxi_01.html
@@ -11,6 +11,8 @@
 
 <body>
     <h1>练习一下 SSH 上传远程仓库的方法</h1>
+    <h2>这是在Login分支上面添加的文字</h2>
+    <img src="https://imgapi.cn/api.php " alt="" hieght="500px" width="800px">
 </body>
 
 </html>
